@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Crash when updating network descriptions
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.2
 Date: 2025-02-14
